--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 
-version = '1.0-1.13.2'
+version = '1.0'
 group = 'com.nmg.me' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'pme'
 
@@ -70,7 +70,7 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.13.2-25.0.64'
+    minecraft 'net.minecraftforge:forge:1.13.2-25.0.70'
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
@@ -96,12 +96,12 @@ dependencies {
 jar {
     manifest {
         attributes([
-            "Specification-Title": "pme",
-            "Specification-Vendor": "pmesareus",
+            "Specification-Title": "examplemod",
+            "Specification-Vendor": "examplemodsareus",
             "Specification-Version": "1", // We are version 1 of ourselves
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"pmesareus",
+            "Implementation-Vendor" :"examplemodsareus",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
